--- a/app/assets/javascripts/views/register.html
+++ b/app/assets/javascripts/views/register.html
@@ -24,7 +24,7 @@
                         </div>
 
                     <div class="form-group">
-                        <label for="email" class="cols-sm-2 control-label">Votre Email</label>
+                        <label for="email" class="cols-sm-2 control-label">Votre mail</label>
                         <div class="cols-sm-10">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
