--- a/app/assets/javascripts/views/login.html
+++ b/app/assets/javascripts/views/login.html
@@ -1,5 +1,5 @@
 <p></p>
-<div class="container mt-6"  ng-controller="authCtrl" ng-if="isLogedIn" >
+<div class="container mt-6"   ng-if="isLogedIn" >
     <form class="form-horizontal " name="myForm" ng-submit="submit()" role="form" method="POST"   >
         <div class="row ">
             <div class="col-md-3"></div>
