--- a/app/assets/javascripts/views/register.html
+++ b/app/assets/javascripts/views/register.html
@@ -1,9 +1,11 @@
 <p></p>
-<div class="container" ng-controller="registerCtrl">
+<div class="container" >
         <h1>S'inscrire</h1>
             <div class="main-login main-center col-md-5 offset-md-3">
                 <form class="form-horizontal" method="post" ng-submit="register()" name="myForm" >
-                    
+                    <div class="alert alert-danger " ng-if="showPasswordError" role="alert">
+                        Veuillez vérifier votre mot de passe !
+                  </div>
                     <div class="form-group">
                         <label for="name" class="cols-sm-2 control-label">Nom</label>
                         <div class="cols-sm-10">
@@ -34,7 +36,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="password" class="cols-sm-2 control-label">Mot de passe</label>
+                        <label for="password" class="cols-sm-2 control-label">Mot de passe <small>(6 caractére au minimum)</small></label>
                         <div class="cols-sm-10">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
