--- a/app/assets/javascripts/views/homeUser.html
+++ b/app/assets/javascripts/views/homeUser.html
@@ -1,95 +1,95 @@
-  <nav class="navbar navbar-expand navbar-dark bg-primary" >
-          <a class="navbar-brand" href="#">myApp</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+<nav class="navbar navbar-expand navbar-dark bg-primary">
+  <a class="navbar-brand" href="#">myApp</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-          <div class="collapse navbar-collapse" id="navbarsExample02">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
-              </li>
-            </ul>
-            <ul class="navbar-nav ">
-              <li class="nav-item active">
-                <a class="nav-link" ng-click="logout()" href="#">Se déconnecter</a>
-              </li>
-            </ul>
+  <div class="collapse navbar-collapse" id="navbarsExample02">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
+      </li>
+    </ul>
+    <ul class="navbar-nav ">
+      <li class="nav-item active">
+        <a class="nav-link" ng-click="logout()" href="#">Se déconnecter</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+<p></p>
+<h1>Bienvenue {{user.prenom}} {{user.nom}} ! <small>Votre solde de congé est : {{user.data.data.solde}} </small></h1>
+<br>
+<div class="container">
+  <div class="card ">
+    <div class="card-header bg-info">
+      Demande
+    </div>
+    <div class="card-body ">
+      <h5 class="card-title">Demande de congé</h5>
+      <p class="card-text">Créer une demande de congé :</p>
+      <form name="myForm" ng-submit="sendDemande()">
+        <div class="row col-md-7">
+          <div class="col">
+            <label class=" col-form-label">Date début</label>
+            <input required ng-model="dateD" class="form-control" type="date">
           </div>
-        </nav>
-  <p></p>
-  <h1>Bienvenue {{user.data.data.prenom}} {{user.data.data.nom}} ! <small>Votre solde de congé est : {{user.data.data.solde}} </small></h1>
-      <br>
-  <div class="container" >
-    <div class="card ">
-          <div class="card-header bg-info">
-            Demande
-          </div>
-          <div class="card-body ">
-            <h5 class="card-title">Demande de congé</h5>
-            <p class="card-text">Créer une demande de congé :</p>
-            <form name="myForm" ng-submit="sendDemande()">
-          <div class="row col-md-7">
-            <div class="col">
-              <label class=" col-form-label">Date début</label>
-              <input required ng-model="dateD" class="form-control" type="date" >
-            </div>
-            <div class="col">
-              <label class=" col-form-label">Date fin</label>
-              <input required ng-model="dateF" class="form-control" type="date" >
-            </div>
-            </div>
-            <p></p>
-            <div class="row ">
-            <div class="col col-md-5">
-            <label for="exampleFormControlTextarea1">Motif d'absence</label>
-            <textarea class="form-control" required ng-model="motifAb" id="exampleFormControlTextarea1" rows="3"></textarea>
-            </div>
-            </div>
-
-          <p></p>
-            <button ng-disabled="myForm.$invalid || myForm.$pending" type="submit"  class="btn btn-primary">Demande</button>
-            <p></p>
-              <div class="alert alert-success col-md-5" ng-if="showMsgValid" role="alert">
-                Demande enregistré  :) !
-              </div>
-              <div class="alert alert-danger col-md-5" ng-if="showMsgError" role="alert">
-                échec d'envoi !
-              </div>
-
-          </form>
+          <div class="col">
+            <label class=" col-form-label">Date fin</label>
+            <input required ng-model="dateF" class="form-control" type="date">
           </div>
         </div>
         <p></p>
-        <br>
+        <div class="row ">
+          <div class="col col-md-5">
+            <label for="exampleFormControlTextarea1">Motif d'absence</label>
+            <textarea class="form-control" required ng-model="motifAb" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+        </div>
+
+        <p></p>
+        <button ng-disabled="myForm.$invalid || myForm.$pending" type="submit" class="btn btn-primary">Demande</button>
+        <p></p>
+        <div class="alert alert-success col-md-5" ng-if="showMsgValid" role="alert">
+          Demande enregistré :) !
+        </div>
+        <div class="alert alert-danger col-md-5" ng-if="showMsgError" role="alert">
+          échec d'envoi !
+        </div>
+
+      </form>
+    </div>
+  </div>
+  <p></p>
+  <br>
   <div class="card ">
     <div class="card-header bg-info">
       Vos Demandes
     </div>
     <div class="card-body ">
       <h5 class="card-title">l’état des vos demandes : </h5>
-                <table class="table table-hover ">
-              <thead class="table-primary">
-                <tr>
-                  <th scope="col">Date début</th>
-                  <th scope="col">Date fin</th>
-                  <th scope="col">Motif d’absence</th>
-                  <th scope="col">Etat</th>
-                </tr>
-              </thead>
-              <tbody class="">
-                <tr ng-repeat="conge in conges" ng-click="sendModel(conge.id)" data-toggle="modal" data-target="#exampleModal">
-                  <td>{{conge.date_debut}}</td>
-                  <td>{{conge.date_fin}}</td>
-                  <td>{{conge.motifAb}}</td>
-                  <td>{{conge.etat}}</td>
-                </tr>
-              </tbody>
-            </table>
-              </div>
-            </div>
-   <p></p>
-   <!-- Modal -->
+      <table class="table table-hover ">
+        <thead class="table-primary">
+          <tr>
+            <th scope="col">Date début</th>
+            <th scope="col">Date fin</th>
+            <th scope="col">Motif d’absence</th>
+            <th scope="col">Etat</th>
+          </tr>
+        </thead>
+        <tbody class="">
+          <tr ng-repeat="conge in conges" ng-click="sendModel(conge.id)" data-toggle="modal" data-target="#exampleModal">
+            <td>{{conge.date_debut}}</td>
+            <td>{{conge.date_fin}}</td>
+            <td>{{conge.motifAb}}</td>
+            <td>{{conge.etat}}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <p></p>
+  <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -111,5 +111,5 @@
         </div>
       </div>
     </div>
- </div>
+  </div>
 </div>
