--- a/app/assets/javascripts/views/login.html
+++ b/app/assets/javascripts/views/login.html
@@ -1,54 +1,52 @@
 <p></p>
-<div class="container mt-6"   ng-if="isLogedIn" >
-    <form class="form-horizontal " name="myForm" ng-submit="submit()" role="form" method="POST"   >
-        <div class="row ">
-            <div class="col-md-3"></div>
-            <div class="col-md-6">
-                <h2>Se connecter</h2>
-                <hr>
-            </div>
+<div class="container mt-6" ng-if="isLogedIn">
+  <form class="form-horizontal " name="myForm" ng-submit="submit()" role="form" method="POST">
+    <div class="row ">
+      <div class="col-md-3"></div>
+      <div class="col-md-6">
+        <h2>Se connecter</h2>
+        <hr>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md-6">
+        <div class="form-group has-danger">
+          <label class="sr-only" for="email">E-Mail Address</label>
+          <div class="input-group mb-2 mr-sm-2 mb-sm-0">
+            <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-at"></i></div>
+            <input type="email" ng-model="user.email" class="form-control" id="email" placeholder="you@example.com" required autofocus>
+          </div>
         </div>
-        <div class="row">
-            <div class="col-md-3"></div>
-            <div class="col-md-6">
-                <div class="form-group has-danger">
-                    <label class="sr-only" for="email">E-Mail Address</label>
-                    <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-                        <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-at"></i></div>
-                        <input type="email"  ng-model="user.email" class="form-control" id="email"
-                               placeholder="you@example.com" required autofocus>
-                    </div>
-                </div>
-            </div>
-            
+      </div>
+
+    </div>
+    <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md-6">
+        <div class="form-group">
+          <label class="sr-only" for="password">Password</label>
+          <div class="input-group mb-2 mr-sm-2 mb-sm-0">
+            <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-key"></i></div>
+            <input type="password" ng-model="user.password" class="form-control" id="password" placeholder="Password" required>
+          </div>
         </div>
-        <div class="row">
-            <div class="col-md-3"></div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label class="sr-only" for="password">Password</label>
-                    <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-                        <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-key"></i></div>
-                        <input type="password" ng-model="user.password"  class="form-control" id="password"
-                               placeholder="Password" required>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="form-control-feedback">
-                    <span class="text-danger align-middle">
-                    <!-- Put password error message here -->    
-                    </span>
-                </div>
-            </div>
+      </div>
+      <div class="col-md-3">
+        <div class="form-control-feedback">
+          <span class="text-danger align-middle">
+            <!-- Put password error message here -->
+          </span>
         </div>
-        <div class="row" style="padding-top: 1rem">
-            <div class="col-md-3"></div>
-            <div class="col-md-6">
-                <button ng-disabled="myForm.$invalid || myForm.$pending" type="submit" class="btn btn-success"><i class="fa fa-sign-in"></i> Se connecter</button>
-                <a href="/register" class="btn btn-info">S'inscrire</a>
-                <a class="btn btn-link" href="/password/reset">Mot de passe oublié ?</a>
-            </div>
-        </div>
+      </div>
+    </div>
+    <div class="row" style="padding-top: 1rem">
+      <div class="col-md-3"></div>
+      <div class="col-md-6">
+        <button ng-disabled="myForm.$invalid || myForm.$pending" type="submit" class="btn btn-success"><i class="fa fa-sign-in"></i> Se connecter</button>
+        <a href="/register" class="btn btn-info">S'inscrire</a>
+        <a class="btn btn-link" href="/password/reset">Mot de passe oublié ?</a>
+      </div>
+    </div>
 
 </div>
