FIX controllers REF #[6](https://trello.com/c/Qu8sD6sd)
Details
------------------
-Fix the pagination with get method
-Add font awesome...

Others
------------------

--- a/app/assets/javascripts/views/homeUser.html
+++ b/app/assets/javascripts/views/homeUser.html
@@ -18,7 +18,7 @@
   </div>
 </nav>
 <p></p>
-<h1>Bienvenue {{user.prenom}} {{user.nom}} ! <small>Votre solde de congé est : {{user.data.data.solde}} </small></h1>
+<h1>Bienvenue {{user.nom}} {{user.prenom}} ! <small>Votre solde de congé est : {{user.data.data.solde}} </small></h1>
 <br>
 <div class="container">
   <div class="card ">
