--- a/app/assets/javascripts/views/homeAdmin.html
+++ b/app/assets/javascripts/views/homeAdmin.html
@@ -1,172 +1,170 @@
-<div>
-  <nav class="navbar navbar-expand navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">ADMIN</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+<nav class="navbar navbar-expand navbar-dark bg-primary">
+  <a class="navbar-brand" href="#">ADMIN</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    <div class="collapse navbar-collapse" id="navbarsExample02">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
-        </li>
-      </ul>
-      <ul class="navbar-nav ">
-        <li class="nav-item active">
-          <a class="nav-link" ng-click="logout()" href="#">Se déconnecter</a>
-        </li>
-      </ul>
-    </div>
+  <div class="collapse navbar-collapse" id="navbarsExample02">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
+      </li>
+    </ul>
+    <ul class="navbar-nav ">
+      <li class="nav-item active">
+        <a class="nav-link" ng-click="logout()" href="#">Se déconnecter</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+<p></p>
+<h1>Bienvenue {{user.nom}} {{user.prenom}} !</h1>
+<br>
+<div class="container">
+
+  <h2>Liste des utilisateurs</h2>
+
+  <table class="table table-hover">
+    <thead class="table-primary">
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Nom et prenom</th>
+        <th scope="col">Email</th>
+        <th scope="col">Role</th>
+        <th scope="col">Congé solde</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr ng-repeat="user in users">
+        <td>{{user.id}}</td>
+        <td>{{user.nom}} {{user.prenom}}</td>
+        <td>{{user.email}}</td>
+        <td>{{user.role}}</td>
+        <td>{{user.solde}}</td>
+      </tr>
+    </tbody>
+  </table>
+  <nav aria-label="..." ng-if="pages.length>1">
+    <ul class="pagination pagination-sm ">
+      <li class="page-item " ng-repeat="page in pages">
+        <a class="page-link " ng-click="reloadUserPage(page)" href="#">{{page}}</a>
+      </li>
+    </ul>
   </nav>
   <p></p>
-  <h1>Bienvenue {{user.prenom}} {{user.nom}} !</h1>
   <br>
-  <div class="container">
-
-    <h2>Liste des utilisateurs</h2>
-
-    <table class="table table-hover">
-      <thead class="table-primary">
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Nom et prenom</th>
-          <th scope="col">Email</th>
-          <th scope="col">Role</th>
-          <th scope="col">Congé solde</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr ng-repeat="user in users">
-          <td>{{user.id}}</td>
-          <td>{{user.nom}} {{user.prenom}}</td>
-          <td>{{user.email}}</td>
-          <td>{{user.role}}</td>
-          <td>{{user.solde}}</td>
-        </tr>
-      </tbody>
-    </table>
-    <nav aria-label="..." ng-if="pages.length>1">
-      <ul class="pagination pagination-sm ">
-        <li class="page-item " ng-repeat="page in pages">
-          <a class="page-link " ng-click="reloadUserPage(page)" href="#">{{page}}</a>
-        </li>
-      </ul>
-    </nav>
-    <p></p>
-    <br>
-    <br>
-    <form class="form-inline my-2  float-right">
-      <h2 class="my-sm-0" style="padding-right:19.9rem;">Liste des demandes non traitée</h2>
-      <input ng-model=motCle class="form-control mr-sm-2 " type="search" placeholder="Rechercher" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" ng-click="find()">Rechercher</button>
-    </form>
-    <table class="table table-hover">
-      <thead class="table-primary">
-        <tr>
-          <th scope="col">Salarié</th>
-          <th scope="col">Date début</th>
-          <th scope="col">Date fin</th>
-          <th scope="col">Motif d’absence</th>
-          <th scope="col">Action</th>
-        </tr>
-      </thead>
-      <tbody class="">
-        <tr ng-repeat="demandeNonT in demandesNonT">
-          <td>{{demandeNonT.user.nom}} {{demandeNonT.user.prenom}} </td>
-          <td>{{demandeNonT.date_debut}}</td>
-          <td>{{demandeNonT.date_fin}}</td>
-          <td>{{demandeNonT.motifAb}}</td>
-          <td><a href="#" class="badge badge-success" ng-click="sendAccept($event,demandeNonT.id,demandeNonT.user.id,demandeNonT.date_debut,demandeNonT.date_fin,demandeNonT.user.solde)">Valider</a> -
-            <a href="#" class="badge badge-danger" ng-click="saveIdCongeDemand(demandeNonT.id)" data-toggle="modal" data-target="#exampleModal">Rejeter</a></td>
-        </tr>
-      </tbody>
-    </table>
-    <nav aria-label="..." ng-if="pagesDNT.length>1">
-      <ul class="pagination pagination-sm ">
-        <li class="page-item " ng-repeat="page in pagesDNT">
-          <a class="page-link " ng-click="reloadDNTPage(page)" href="#">{{page}}</a>
-        </li>
-      </ul>
-    </nav>
-    <br>
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Demande informations</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <div class="row ">
-              <div class="col">
-                <label for="exampleFormControlTextarea1">Ajouter un motif de refus :</label>
-                <textarea class="form-control" required ng-model="motifR" id="exampleFormControlTextarea1" rows="3"></textarea>
-              </div>
+  <br>
+  <form class="form-inline my-2  float-right">
+    <h2 class="my-sm-0" style="padding-right:19.9rem;">Liste des demandes non traitée</h2>
+    <input ng-model=motCle class="form-control mr-sm-2 " type="search" placeholder="Rechercher" aria-label="Search">
+    <button class="btn btn-outline-success my-2 my-sm-0" ng-click="find()">Rechercher</button>
+  </form>
+  <table class="table table-hover">
+    <thead class="table-primary">
+      <tr>
+        <th scope="col">Salarié</th>
+        <th scope="col">Date début</th>
+        <th scope="col">Date fin</th>
+        <th scope="col">Motif d’absence</th>
+        <th scope="col">Action</th>
+      </tr>
+    </thead>
+    <tbody class="">
+      <tr ng-repeat="demandeNonT in demandesNonT">
+        <td>{{demandeNonT.user.nom}} {{demandeNonT.user.prenom}} </td>
+        <td>{{demandeNonT.date_debut}}</td>
+        <td>{{demandeNonT.date_fin}}</td>
+        <td>{{demandeNonT.motifAb}}</td>
+        <td><a href="#" class="badge badge-success" ng-click="sendAccept($event,demandeNonT.id,demandeNonT.user.id,demandeNonT.date_debut,demandeNonT.date_fin,demandeNonT.user.solde)">Valider</a> -
+          <a href="#" class="badge badge-danger" ng-click="saveIdCongeDemand(demandeNonT.id)" data-toggle="modal" data-target="#exampleModal">Rejeter</a></td>
+      </tr>
+    </tbody>
+  </table>
+  <nav aria-label="..." ng-if="pagesDNT.length>1">
+    <ul class="pagination pagination-sm ">
+      <li class="page-item " ng-repeat="page in pagesDNT">
+        <a class="page-link " ng-click="reloadDNTPage(page)" href="#">{{page}}</a>
+      </li>
+    </ul>
+  </nav>
+  <br>
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Demande informations</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="row ">
+            <div class="col">
+              <label for="exampleFormControlTextarea1">Ajouter un motif de refus :</label>
+              <textarea class="form-control" required ng-model="motifR" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
           </div>
-          <div class="modal-footer">
-            <button type="button" ng-click="sendReject()" class="btn btn-primary">Confirmer</button>
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" ng-click="sendReject()" class="btn btn-primary">Confirmer</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
-    <div class="alert alert-success col-md-5" ng-if="showMsgValid" role="alert">
-      demande enregistrée :) !
-    </div>
-    <div class="alert alert-success col-md-5" ng-if="showMsgError" role="alert">
-      échec d'envoi !
-    </div>
-    <h2>Liste de demandes traitée</h2>
-    <table class="table table-hover">
-      <thead class="table-primary">
-        <tr>
-          <th scope="col">Salarié</th>
-          <th scope="col">Date début</th>
-          <th scope="col">Date fin</th>
-          <th scope="col">Motif d’absence</th>
-          <th scope="col">Etat</th>
-        </tr>
-      </thead>
-      <tbody class="">
-        <tr data-toggle="modal" data-target="#exampleModal2" ng-repeat="demandeT in demandesT" ng-click="getModelInfo(demandeT.id)">
-          <td>{{demandeT.user.nom}} {{demandeT.user.prenom}} </td>
-          <td>{{demandeT.date_debut}}</td>
-          <td>{{demandeT.date_fin}}</td>
-          <td>{{demandeT.motifAb}}</td>
-          <td>{{demandeT.etat}}</td>
-        </tr>
-      </tbody>
-    </table>
-    <nav aria-label="..." ng-if="pagesDT.length>1">
-      <ul class="pagination pagination-sm ">
-        <li class="page-item " ng-repeat="page in pagesDT">
-          <a class="page-link " ng-click="reloadDTPage(page)" href="#">{{page}}</a>
-        </li>
-      </ul>
-    </nav>
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Demande informations</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <label>Date debut : {{myModel[0].date_debut}}</label></br>
-            <label>Date fin : {{myModel[0].date_fin}}</label></br>
-            <label>Etat : {{myModel[0].etat}}</label></br>
-            <label>Motif de l’absence : {{myModel[0].motifAb}}</label></br>
-            <label ng-if="myModel[0].motifR">Motif de refus : {{myModel[0].motifR}}</label></br>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          </div>
+  </div>
+  <div class="alert alert-success col-md-5" ng-if="showMsgValid" role="alert">
+    demande enregistrée :) !
+  </div>
+  <div class="alert alert-success col-md-5" ng-if="showMsgError" role="alert">
+    échec d'envoi !
+  </div>
+  <h2>Liste de demandes traitée</h2>
+  <table class="table table-hover">
+    <thead class="table-primary">
+      <tr>
+        <th scope="col">Salarié</th>
+        <th scope="col">Date début</th>
+        <th scope="col">Date fin</th>
+        <th scope="col">Motif d’absence</th>
+        <th scope="col">Etat</th>
+      </tr>
+    </thead>
+    <tbody class="">
+      <tr data-toggle="modal" data-target="#exampleModal2" ng-repeat="demandeT in demandesT" ng-click="getModelInfo(demandeT.id)">
+        <td>{{demandeT.user.nom}} {{demandeT.user.prenom}} </td>
+        <td>{{demandeT.date_debut}}</td>
+        <td>{{demandeT.date_fin}}</td>
+        <td>{{demandeT.motifAb}}</td>
+        <td>{{demandeT.etat}}</td>
+      </tr>
+    </tbody>
+  </table>
+  <nav aria-label="..." ng-if="pagesDT.length>1">
+    <ul class="pagination pagination-sm ">
+      <li class="page-item " ng-repeat="page in pagesDT">
+        <a class="page-link " ng-click="reloadDTPage(page)" href="#">{{page}}</a>
+      </li>
+    </ul>
+  </nav>
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Demande informations</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <label>Date debut : {{myModel[0].date_debut}}</label></br>
+          <label>Date fin : {{myModel[0].date_fin}}</label></br>
+          <label>Etat : {{myModel[0].etat}}</label></br>
+          <label>Motif de l’absence : {{myModel[0].motifAb}}</label></br>
+          <label ng-if="myModel[0].motifR">Motif de refus : {{myModel[0].motifR}}</label></br>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
