--- a/app/assets/javascripts/views/login.html
+++ b/app/assets/javascripts/views/login.html
@@ -12,6 +12,9 @@
       <div class="col-md-3"></div>
       <div class="col-md-6">
         <div class="form-group has-danger">
+          <div class="alert alert-danger" ng-if="showLoginError" role="alert">
+            Invalide email ou mot de passe !
+          </div>
           <label class="sr-only" for="email">E-Mail Address</label>
           <div class="input-group mb-2 mr-sm-2 mb-sm-0">
             <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-at"></i></div>
