--- a/app/assets/javascripts/views/homeUser.html
+++ b/app/assets/javascripts/views/homeUser.html
@@ -18,7 +18,7 @@
   </div>
 </nav>
 <p></p>
-<h1>Bienvenue {{user.nom}} {{user.prenom}} ! <small>Votre solde de congé est : {{user.data.data.solde}} </small></h1>
+<h1>Bienvenue {{user.nom}} {{user.prenom}} ! <small>Votre solde de congé est : {{user.solde}} </small></h1>
 <br>
 <div class="container">
   <div class="card ">
