--- a/app/assets/javascripts/views/register.html
+++ b/app/assets/javascripts/views/register.html
@@ -5,7 +5,9 @@
     <form class="form-horizontal" method="post" ng-submit="register()" name="myForm">
       <div class="alert alert-danger" ng-if="showPasswordError" role="alert">
         Veuillez vérifier votre mot de passe !
-
+      </div>
+      <div class="alert alert-danger" ng-if="showEmailError" role="alert">
+        Un compte existe déjà pour cette adresse mail !
       </div>
       <div class="form-group">
         <label for="name" class="cols-sm-2 control-label">Nom</label>
