REFACTOR user page
REF #[6](https://trello.com/c/Qu8sD6sd)

Details
------------------
-Add Moment.js
-Complete the user service

--- a/app/assets/javascripts/templates/user_table_demands.html
+++ b/app/assets/javascripts/templates/user_table_demands.html
@@ -14,7 +14,7 @@
         </tr>
       </thead>
       <tbody class="">
-        <tr ng-repeat="conge in conges" ng-click="sendModel(conge.id)" data-toggle="modal" data-target="#exampleModal">
+        <tr ng-repeat="conge in conges" ng-click="getModel(conge.id)" data-toggle="modal" data-target="#exampleModal">
           <td>{{conge.date_debut}}</td>
           <td>{{conge.date_fin}}</td>
           <td>{{conge.motifAb}}</td>
