--- a/app/assets/javascripts/views/homeAdmin.html
+++ b/app/assets/javascripts/views/homeAdmin.html
@@ -63,6 +63,13 @@
       </tr>
     </tbody>
   </table>
+  <nav aria-label="..." ng-if="pagesDNT.length>1">
+    <ul class="pagination pagination-sm ">
+      <li class="page-item " ng-class="{active : ActivePageDNT===page}" ng-repeat="page in pagesDNT">
+        <a class="page-link " ng-click="reloadDNTPage(page)" href="#">{{page}}</a>
+      </li>
+    </ul>
+  </nav>
   <hr>
   <br>
   <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
