ADD button REF #[6](https://trello.com/c/Qu8sD6sd)
Details
------------------
Add a button to cancel the edit in users table

Others
------------------

--- a/app/assets/javascripts/templates/editor.html
+++ b/app/assets/javascripts/templates/editor.html
@@ -1,4 +1,4 @@
-<tr>
+<tr ng-show="editorState">
   <td colspan="{{cols.length}}">
     <div ng-repeat="col in cols">
       <span ng-if="col.title !== 'Editer'">
@@ -10,5 +10,7 @@
         </form>
       </span>
     </div>
+    <p></p>
+    <button type="button" ng-click="changeState()" class="btn btn-secondary">Annuler</button>
   </td>
 </tr>
