--- a/app/assets/javascripts/templates/editor.html
+++ b/app/assets/javascripts/templates/editor.html
@@ -1,16 +1,17 @@
 <tr ng-show="editorState">
   <td colspan="{{cols.length}}">
+    <form name="myForm" ng-submit="editUser()" class="col-md-4">
     <div ng-repeat="col in cols">
       <span ng-if="col.title !== 'Editer'">
-        <form class="col-md-4">
           <div class="form-row">
             <label class="col-form-label px-2">{{col.field}} : </label>
-            <input type="text" ng-model="row[col.field]" class="form-control">
+            <input type="text" ng-model="row[col.field]" class="form-control" required>
           </div>
-        </form>
       </span>
     </div>
     <p></p>
-    <button type="button" ng-click="changeState()" class="btn btn-secondary">Annuler</button>
+    <button type="button" ng-click="changeState()" class="btn btn-sm btn-secondary">Annuler</button>
+    <button type="submit" ng-disabled="myForm.$invalid || myForm.$pending" class="btn btn-sm btn-primary" >Valider</button>
+    </form>
   </td>
 </tr>
