--- a/app/assets/javascripts/template/users/users_table_admin.html
+++ b/app/assets/javascripts/template/users/users_table_admin.html
@@ -1,5 +1,12 @@
 <div>
-  <h2>Liste des utilisateurs</h2>
+  <div class="row col-md-12">
+    <h2>Liste des utilisateurs</h2>
+    <div class="offset-md-6" id="editMsg">
+      <div class="alert alert-success alert-dismissible">
+        <strong>Modification réussie</strong>
+      </div>
+    </div>
+  </div>
   <table class="table table-hover">
     <thead class="table-primary">
       <tr>
