--- a/app/assets/javascripts/views/users/homeAdmin.html
+++ b/app/assets/javascripts/views/users/homeAdmin.html
@@ -18,7 +18,9 @@
   </div>
 </nav>
 <p></p>
-<h1>Bienvenue {{user.nom}} {{user.prenom}} !</h1>
+<div class="row col-md-12">
+  <h1> Bienvenue {{user.nom}} {{user.prenom}} !</h1>
+</div>
 <br>
 <div class="container">
 
