--- a/app/assets/javascripts/views/users/homeUser.html
+++ b/app/assets/javascripts/views/users/homeUser.html
@@ -18,7 +18,7 @@
   </div>
 </nav>
 <p></p>
-<ng-Welcome></ng-Welcome>
+<ng-Welcome user="user"></ng-Welcome>
 <br>
 <div class="container">
   <hr>
