--- a/app/assets/javascripts/template/users/users_table_admin.html
+++ b/app/assets/javascripts/template/users/users_table_admin.html
@@ -1,4 +1,4 @@
-<div>
+<div class="container">
   <div class=" col-md-12">
     <h2 align="center" >Liste des utilisateurs</h2>
     <div class="offset-md-8 col-md-4" id="editMsg">
