--- a/app/assets/javascripts/views/users/homeUser.html
+++ b/app/assets/javascripts/views/users/homeUser.html
@@ -1,68 +1,56 @@
-<nav class="navbar navbar-expand navbar-dark bg-primary">
-  <a class="navbar-brand" href="#">myApp</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarsExample02">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
-      </li>
-    </ul>
-    <ul class="navbar-nav ">
-      <li class="nav-item active">
-        <a class="nav-link" ng-click="logout()" href="#">Se déconnecter</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-<p></p>
-<ng-Welcome user="user"></ng-Welcome>
-<br>
-<div class="container">
-  <hr>
-  <div class="card ">
-    <div class="card-header bg-info">
-      Demande
-    </div>
-    <div class="card-body ">
-      <h5 class="card-title">Demande de congé</h5>
-      <p class="card-text">Créer une demande de congé :</p>
-      <form name="myForm" ng-submit="sendDemande()">
-        <div class="row col-md-7">
-          <div class="col">
-            <label class=" col-form-label">Date début</label>
-            <input required ng-model="dateD" class="form-control" type="date">
-          </div>
-          <div class="col">
-            <label class=" col-form-label">Date fin</label>
-            <input required ng-model="dateF" class="form-control" type="date">
-          </div>
-        </div>
-        <p></p>
-        <div class="row ">
-          <div class="col col-md-5">
-            <label for="exampleFormControlTextarea1">Motif d'absence</label>
-            <textarea class="form-control" required ng-model="motifAb" id="exampleFormControlTextarea1" rows="3"></textarea>
-          </div>
-        </div>
-
-        <p></p>
-        <button ng-disabled="myForm.$invalid || myForm.$pending" type="submit" class="btn btn-primary">Demande</button>
-        <p></p>
-        <div class="alert alert-success col-md-5" ng-if="showMsgValid" role="alert">
-          Demande enregistré :) !
-        </div>
-        <div class="alert alert-danger col-md-5" ng-if="showMsgError" role="alert">
-          échec d'envoi !
-        </div>
-
-      </form>
-    </div>
-  </div>
-  <p></p>
-  <hr>
-  <br>
-  <ng-user-table-demands></ng-user-table-demands>
+<entete ng-if="user!=null"></entete>
+<div class="container" style="margin-top: 60px;">
+ <div class="row">
+   <div class="col-md-12">
+       <button type="button" class="btn btn-primary btnDemander" data-toggle="modal" data-target="#BtnDemandeCongeModal">
+       <i class="fa fa-plus"></i> Ajouter une demande
+       </button>
+   </div>
+   <div class="modal fade" id="BtnDemandeCongeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+     <div class="modal-dialog modal-lg" role="document">
+       <div class="modal-content">
+         <div class="modal-header">
+           <h5 class="modal-title" id="exampleModalLongTitle">Demande de congé</h5>
+           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+             <span aria-hidden="true">&times;</span>
+           </button>
+         </div>
+           <form name="myForm" ng-submit="sendDemande()">
+         <div class="modal-body">
+             <div class="alert alert-success col-md-5" ng-if="showMsgValid" role="alert">
+               Demande enregistré :) !
+             </div>
+             <div class="alert alert-danger col-md-5" ng-if="showMsgError" role="alert">
+               échec d'envoi !
+             </div>
+             <div class="row col-md-12">
+               <div class="col-md-6">
+                 <label class=" col-form-label">Date début</label>
+                 <input required ng-model="dateD" class="form-control" type="date">
+               </div>
+               <div class="col-md-6">
+                 <label class="col-form-label">Date fin</label>
+                 <input required ng-model="dateF" class="form-control" type="date">
+               </div>
+             </div>
+             <p></p>
+             <div class="row ">
+               <div class="col-md-12">
+                 <label class="col-form-label">Motif d'absence</label>
+                 <input type="text "class="form-control" required ng-model="motifAb" id="exampleFormControlTextarea1" rows="3"></input>
+               </div>
+             </div>
+         </div>
+         <div class="modal-footer">
+           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+         <button ng-disabled="myForm.$invalid || myForm.$pending" type="submit" class="btn btn-primary">Demande</button>
+         </div>
+       </form>
+       </div>
+     </div>
+   </div>
+  <div class="col-md-12"> <ng-user-table-demands></ng-user-table-demands></div>
+ </div>
 </div>
+
+<ui-view></ui-view>
