--- a/app/assets/javascripts/template/users/users_table_admin.html
+++ b/app/assets/javascripts/template/users/users_table_admin.html
@@ -1,7 +1,7 @@
 <div>
-  <div class="row col-md-12">
-    <h2>Liste des utilisateurs</h2>
-    <div class="offset-md-6" id="editMsg">
+  <div class=" col-md-12">
+    <h2 align="center" >Liste des utilisateurs</h2>
+    <div class="offset-md-8 col-md-4" id="editMsg">
       <div class="alert alert-success alert-dismissible">
         <strong>Modification réussie</strong>
       </div>
